--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,24 +5,26 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   release:
-    name: Semantic Release
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 20.10.0
+      - run: npm ci
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Set Git identity
+        run: |
+          git config --global user.name "semantic-release-bot"
+          git config --global user.email "semantic-release@users.noreply.github.com"
 
-      - name: Run semantic-release
+      - run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
